# procurator

./: .envrc  .gitignore  Cargo.toml  README.md  cloud-hypervisor.yaml  cluster.nix  container_and_vm_examples.nix  def.nix  default.nix  flake.nix  generation  infrastructure.nix  new.nix  notes  notes.md  other.nix  post-receive  state-lib.nix
.github/: copilot-instructions.md
autonix/tests/fixtures/analysis/rust/crates/myapp-api/: Cargo.toml
autonix/tests/fixtures/analysis/rust/crates/myapp-core/: Cargo.toml
autonix/tests/fixtures/manifests/: Cargo-minimal.toml  go.mod  package.json  pyproject.toml
cache/: Cargo.toml  (+1 more)
ci_service/: Cargo.toml  README.md
ci_service/src/: builds.rs  config.rs  job_queue.rs  lib.rs  main.rs
cli/: Cargo.toml  README.md  TESTING.md
cli/src/: cli.rs  client.rs  commands.rs  init.rs  lib.rs  main.rs  server.rs  test_main.rs  testing.rs  worker_client.rs  worker_test_main.rs  worker_testing.rs
cli/src/interactive/: mod.rs  ui.rs
control_plane/: Cargo.toml  README.md
control_plane/src/: dto.rs  lib.rs  main.rs  node.rs  scheduler.rs  server.rs  state.rs
procurator/: Cargo.toml  flake.nix
procurator/autonix/: Cargo.toml  MASTER_FLAKE.md
procurator/autonix/src/: mapping.rs
procurator/autonix/src/mapping/: buildfiles.rs  cicdfiles.rs  containers.rs  languages.rs  lockfiles.rs  manifests.rs  mod.rs  outils.rs  version.rs
procurator/autonix/src/repo/: analysis.rs  flake.rs  mod.rs  parser.rs  scan.rs
procurator/autonix/templates/: flake.jinja
procurator/autonix/tests/: test_analysis.rs
procurator/autonix/tests/features/go_standalone/: go.mod  main.go
procurator/autonix/tests/features/go_workspace/: go.work
procurator/autonix/tests/features/go_workspace/backend/: main.go
procurator/autonix/tests/features/mixed_language/: index.js  package.json
procurator/autonix/tests/features/mixed_language/src/: main.rs
procurator/autonix/tests/features/multi_language_monorepo/backend/: Cargo.toml
procurator/autonix/tests/features/multi_language_monorepo/backend/src/: main.rs
procurator/autonix/tests/features/nested_workspaces/crate_a/: Cargo.toml
procurator/autonix/tests/features/node_monorepo/: package.json
procurator/autonix/tests/features/rust_standalone/: Cargo.toml
procurator/autonix/tests/features/rust_workspace/: Cargo.toml
procurator/autonix/tests/features/rust_workspace/crates/crate_b/: Cargo.toml
procurator/autonix/tests/fixtures/analysis/js_and_python/: Dockerfile  Makefile  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
procurator/autonix/tests/fixtures/analysis/rust/: Cargo.toml  Dockerfile  docker-compose.yml
procurator/autonix/tests/fixtures/cicd/: github-workflow.yml
procurator/autonix/tests/fixtures/containers/: Dockerfile  docker-compose.yml
procurator/autonix/tests/fixtures/manifests/: Cargo-workspace.toml  Cargo.toml  package-single-bin.json  package-workspace-object.json  package-workspace.json  pyproject-simple.toml
procurator/autonix/tests/fixtures/scan/python_project/: pyproject.toml
procurator/cache/: cache-private.pem  cache-public.pem
procurator/cache/src/: main.rs
procurator/ci_service/: ARCHITECTURE.md  Cargo.toml  post-receive
procurator/ci_service/src/: api.rs  builds.rs  config.rs  database.rs  domain.rs  error.rs  git_manager.rs  git_url.rs  job_queue.rs  lib.rs  main.rs  nix_parser.rs  queue.rs  repo_manager.rs  web.rs  worker.rs
procurator/ci_service/src/builds/: mod.rs
procurator/ci_service/src/nix_parser/: checks.rs  flake.rs  mod.rs
procurator/ci_service/static/: index.html
procurator/ci_service/templates/: index.html
procurator/ci_service/templates/repo/: build_detail.html  builds.html  files.html  flake.html
procurator/ci_service/test-flake/: flake.nix
procurator/cli/: Cargo.toml  README_TEST.md
procurator/cli/src/: cli.rs  client.rs  commands.rs  init.rs  main.rs  test_main.rs  testing.rs
procurator/cli/src/autonix/: mapping.rs  mod.rs  parser.rs
procurator/cli/src/autonix/project/: mod.rs
procurator/cli/src/autonix/repo/: analysis.rs  detection.rs  mod.rs  parser.rs  scan.rs
procurator/commands/: Cargo.toml  build.rs
procurator/commands/schema/: commands.capnp  master.capnp
procurator/commands/src/: lib.rs
procurator/control_plane/: Cargo.toml
procurator/control_plane/src/: dto.rs  lib.rs  node.rs  scheduler.rs  server.rs  state.rs
procurator/nix/: flake.nix
procurator/nix/modules/: cluster.nix
procurator/nixcli/: Cargo.toml
procurator/nixcli/src/: lib.rs
procurator/repo_outils/: Cargo.toml
procurator/repo_outils/src/: git.rs  lib.rs
procurator/repo_outils/src/nix/: checks.rs  commands.rs  logs.rs  mod.rs
procurator/repo_outils/test-flake/: detailed-log.json  detailed-log2.json  dummy-file2.json  nix-log
procurator/repohub/: Cargo.toml  README.md
procurator/repohub/src/: config.rs  lib.rs  main.rs  models.rs  repo_manager.rs  web.rs
procurator/repohub/src/models/: configuration.rs
procurator/repohub/src/services/: repository_service.rs
procurator/repohub/templates/: base.html  flake.html  index.html  not_implemented.html  project.html  repository.html  user.html
procurator/repohub/templates/repo/: builds.html  flake.html  infrastructure.html
procurator/src/: main.rs
procurator/worker/: Cargo.toml
procurator/worker/src/: builder.rs  dto.rs  lib.rs  node.rs  server.rs
repohub/: Cargo.toml  README.md
repohub/src/: config.rs  database.rs  lib.rs  models.rs  web.rs
repohub/src/services/: mod.rs
repohub/templates/: configuration.html  configuration_v2.html
worker/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  QUICK_START.md  README.md  TODO.md  build.rs
worker/examples/: vm-config.json  vm_manager_usage.rs
worker/scripts/: cleanup-network.sh  setup-network.sh
worker/src/: dto.rs  lib.rs  main.rs  node.rs  server.rs  vm_manager.rs  vm_manager_tests.rs  vms.rs
worker/src/runtime/: application.rs  controller.rs  executable.rs  mod.rs
worker/src/vmm/: cloud_hypervisor.rs  interface.rs  mock.rs  mod.rs
worker/tests/: integration_test.rs
(+157 files in other folders)
