[package]
name = "procurator"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
cli = { path = "cli" }


[workspace]
members = ["cli", "control_plane", "dummy", "worker"]
