[package]
name = "procurator"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
capnp = "0.20.3"
capnp-rpc = "0.20.3"

tokio = { version = "1.4.0", features = ["net", "rt", "macros", "rt-multi-thread", "process", "fs", "sync"]}
tokio-util = { version = "0.7.4", features = ["compat"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

uuid = { version = "1.17.0", features = ["v7"] }

futures = "0.3.0"

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = "0.4"

commands = { path = "commands" }
repo_outils = { path = "repo_outils" }
autonix = { path = "autonix" }
control_plane = { path = "control_plane" }
worker = { path = "worker" }

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
capnp.workspace = true
capnp-rpc.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
control_plane.workspace = true
worker.workspace = true
serde.workspace = true
serde_json.workspace = true

[workspace]
members = ["cli", "commands", "control_plane", "worker", "ci_service", "cache", "repo_outils", "repohub", "autonix"]

[workspace.lints.clippy]
all = { level = "allow" }
pedantic = { level = "allow" }

[workspace.lints.rust]
warnings = "allow"
