[package]
name = "ci_service"
version = "0.1.0"
edition = "2021"

[features]
default = ["web"]
web = ["axum"]

[dependencies]
tokio = { workspace = true, features = ["signal"] }
tokio-stream = "0.1"
axum= { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http = { version = "0.5", features = ["trace"] }
chrono.workspace = true
futures.workspace = true
repo_outils.workspace = true

[lints]
workspace = true
