[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
capnp.workspace = true
capnp-rpc.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
commands.workspace = true
futures.workspace = true
ratatui = "0.29.0"
rand = "0.9.1"
crossterm = "0.29"
