[package]
name = "control_plane"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
capnp.workspace = true
capnp-rpc.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
commands.workspace = true
futures.workspace = true

[lints]
workspace = true
