[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
capnp.workspace = true
capnp-rpc.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
commands.workspace = true
uuid.workspace = true

# low-level netlink library used for attaching TAPs to bridges without spawning `ip`
rtnetlink = "0.11"

# raw libc bindings for TAP ioctl (TUNSETIFF, TUNSETPERSIST)
libc = "0.2"

# VMM dependencies
hyper = { version = "0.14", features = ["client", "http1", "stream"] }
hyperlocal = "0.8"
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
