[package]
name = "autonix"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml_ng = "0.10"
askama = { version = "0.14.0", features = ["derive"] }
dockerfile-parser = "0.9.0"
# We could use those two to read/write Nix code directly
ser_nix = "0.1.2"
# tvix_serde = { git = "https://github.com/tvlfyi/tvix", branch = "canon", package = "tvix-serde" }
