[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pcr"
path = "src/main.rs"

[[bin]]
name = "pcr-test"
path = "src/test_main.rs"

[[bin]]
name = "pcr-worker-test"
path = "src/worker_test_main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
capnp.workspace = true
capnp-rpc.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
commands.workspace = true
autonix.workspace = true
futures.workspace = true
ratatui = { version = "0.29.0", features = ["all-widgets", "crossterm"] }
rand = "0.9.1"
crossterm = "0.29"
