[workspace]
members = [
    "crates/myapp-core",
    "crates/myapp-api",
    "crates/myapp-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.75.0"
authors = ["John Doe <john@example.com>", "Jane Smith <jane@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/myapp"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
