[package]
name = "myapp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core business logic and domain models for myapp"
keywords = ["core", "domain", "business-logic"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
