[package]
name = "myapp-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for myapp"
keywords = ["cli", "command-line"]

[dependencies]
myapp-core = { path = "../myapp-core" }
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[[bin]]
name = "myapp"
path = "src/main.rs"
